@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<addon id="plugin.video.eurosport" name="Eurosport Player" provider-name="Michal Novotny" version="1.0">
+<addon id="plugin.video.eurosport" name="Eurosport Player" provider-name="Michal Novotny" version="1.1">
   <requires>
     <import addon="xbmc.python" version="2.1.0" />
     <import addon="script.module.stream.resolver" version="1.6.22" />
